# k7s

./: .gitignore  README.md  backlog.md  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tasks.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
design/: K8s Monitor.dc.html  README.md
dev/: run.sh  shots.mjs
dev/cluster/: down.sh  kind-config.yaml  up.sh
dev/cluster/manifests/: 00-namespaces.yaml  10-workloads.yaml  20-batch.yaml  30-network.yaml  40-config.yaml
docs/: verification.md
src/: App.module.css  App.tsx  main.tsx  plotly.d.ts  store.test.ts  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: crd_check.rs  drain_check.rs  dryrun_check.rs  events_check.rs  helm_check.rs  helm_props_check.rs  live_check.rs  logs_check.rs  nodeshell_check.rs  nodestats_check.rs  promql_check.rs  properties_check.rs  related_check.rs  related_links_check.rs  restart_check.rs  storage_check.rs  svc_forward_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/kube/: client.rs  discovery.rs  drain.rs  dto.rs  exec.rs  exporter.rs  helm.rs  logs.rs  manager.rs  mappers.rs  metrics.rs  mod.rs  nodeshell.rs  nodestats.rs  portforward.rs  promql.rs  properties.rs  restart.rs  watchers.rs
src/components/actions/: ActionList.module.css  ActionList.tsx  RowContextMenu.tsx
src/components/detail/: ActionsMenu.tsx  CodeEditor.tsx  DetailPanel.module.css  DetailPanel.tsx  EventsTab.module.css  EventsTab.tsx  LogsTab.module.css  LogsTab.tsx  MetricsTab.module.css  MetricsTab.tsx  NodeShellTab.module.css  NodeShellTab.tsx  PropertiesTab.module.css  PropertiesTab.tsx  ShellTab.module.css  ShellTab.tsx  YamlTab.module.css  YamlTab.tsx  plot.ts  useTerminal.ts
src/components/forwards/: ForwardsBar.module.css  ForwardsBar.tsx
src/components/palette/: CommandPalette.module.css  CommandPalette.tsx
src/components/settings/: SettingsPanel.module.css  SettingsPanel.tsx
src/hooks/: testUtils.ts  useBootstrap.ts  useClickOutside.ts  useCustomKindWatch.ts  useGlobalKeys.test.ts  useGlobalKeys.ts  useLogStream.ts  useNodeStats.ts  useNow.ts  useTableKeys.ts  useTheme.ts
src/lib/: actions.test.ts  actions.ts  connect.ts  diff.test.ts  diff.ts  dom.ts  drain.test.ts  drain.ts  filter.test.ts  filter.ts  format.test.ts  format.ts  fuzzy.test.ts  fuzzy.ts  kinds.test.ts  kinds.ts  logview.test.ts  logview.ts  palette.test.ts  palette.ts  selection.test.ts  selection.ts  settings.test.ts  settings.ts  sort.test.ts  sort.ts  theme.test.ts  theme.ts  tone.ts  virtual.test.ts  virtual.ts
src/providers/: index.ts  types.ts
src/styles/: global.css  tokens.css
src/types/: node-test-apis.d.ts
(+18 files in other folders)
